syntax = "proto3";

package text2image;

// The request message containing the text prompt.
message Text2ImageRequest {
  string prompt = 1;
}

// The response message containing status and file path.
message Text2ImageResponse {
  string status = 1;
  string file = 2;
}

// The service definition.
service Text2ImageService {
  rpc GenerateImage (Text2ImageRequest) returns (Text2ImageResponse);
}
